[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-raptor"
version = "1.0.0"
description = "High-performance multimodal transportation routing with Wave-Expansion and OSM Dijkstra RAPTOR"
authors = [
    {name = "Taewoo Kim", email = "twdaniel@gachon.ac.kr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["routing", "transportation", "multimodal", "RAPTOR", "urban-mobility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "networkx>=2.6.0",
    "scipy>=1.7.0",
    "osmnx>=1.2.0",
    "shapely>=1.8.0"
]

[project.optional-dependencies]
viz = ["folium>=0.12.0", "matplotlib>=3.4.0"]
dev = ["pytest>=6.0.0", "black>=21.0.0", "ruff>=0.1.0"]

[project.scripts]
mmraptor = "mmraptor.pipeline.route:cli_main"

[project.urls]
Homepage = "https://github.com/username/multimodal-raptor"
Repository = "https://github.com/username/multimodal-raptor"
Documentation = "https://github.com/username/multimodal-raptor#readme"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR0915", "C901"]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]